# NSL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-all-benchmarks.sh  run-all-benchmarks.sh  transformer.hpp
Benchmarks/: CMakeLists.txt  benchmark.hpp  benchmark_main.cpp  evaluate_benchmark_data.py
Benchmarks/FermionMatrix/: CMakeLists.txt  bench_M.cpp  bench_diag_cube.cpp  bench_diag_cube_gpu.cpp  bench_diag_ring.cpp  bench_diag_ring_gpu.cpp  bench_diag_square.cpp  bench_exp_cube.cpp  bench_exp_cube_gpu.cpp  bench_exp_ring.cpp  bench_exp_ring_gpu.cpp  bench_exp_square.cpp  bench_logDetM.cpp  benchmark_fermionMatrixHubbardExp.cpp  exec_benchmark.sh
Benchmarks/FermionMatrix/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  bench_MdaggerM-checkpoint.cpp  bench_diag_cube-checkpoint.cpp  bench_diag_ring-checkpoint.cpp  bench_diag_square-checkpoint.cpp  bench_diag_square_gpu-checkpoint.cpp  bench_exp_cube-checkpoint.cpp  bench_exp_ring-checkpoint.cpp  bench_exp_ring_gpu-checkpoint.cpp  bench_exp_square-checkpoint.cpp  bench_exp_square_gpu-checkpoint.cpp
Benchmarks/Tensor/: CMakeLists.txt  bench_tensor_add.cpp  benchmark_tensor.cpp
Documentation/: .gitignore  CMakeLists.txt  Doxyfile.in  our-work.bib
Documentation/ClusterNotes/: JSC_jureca.md
Documentation/MergePlan/: DesignGoals.md  MergePlan.md  NotesOnIsle.md
Executables/Examples/: CMakeLists.txt  RadialMCMC_example_param.yml  bench_fermion_matrix.cpp  benchmark.cpp  example_2_correlators.cpp  example_BiCGStab.cpp  example_CG.cpp  example_GPUStreams.cpp  example_GPU_Exp.cpp  example_GPU_MatExp.cpp  example_GPU_Tensor.cpp  example_GPU_tensor.cpp  example_IO.cpp  example_MCMC.cpp  example_MCMC_L6_MD22.cpp  example_MCMC_L6_MD30.cpp  example_MCMC_L9_MD22.cpp  example_MCMC_L9_MD30.cpp  example_PseudoFermions.cpp  example_Pseudofermion.cpp  example_RadialMCMC.cpp  example_Tensor_datalocality.cpp  example_action.cpp  example_autotune_MCMC.cpp  example_callM.cpp  example_cli.cpp  example_configuration.cpp  example_constructor.cpp  example_correlators.cpp  example_diaglogDetM.cpp  example_fermionMatrixHubbardExp.cpp  example_honeycomb.cpp  example_hubbard_correlator.cpp  example_k_correlators.cpp  example_lattice.cpp  example_leapfrog.cpp  example_mat_vec.cpp  example_param.yml  example_param_four_sites.yml  example_rungeKutta4.cpp  (+6 more)
Executables/Hubbard/: CMakeLists.txt  HMC.cpp  PseudoHMC.cpp  example_param.yml  flowForTrain_keepLast.cpp  flowForTrain_keepProbable.cpp  flowForTrain_stepwise.cpp
Executables/Schwinger/: CMakeLists.txt  HMC.cpp  HMC_pseudo.cpp  Measure.cpp  Measure_CC.cpp  Measure_corr.cpp  example_param.yml  wilsonlogdet.cpp
Python/: CMakeLists.txt  PyNSL.cpp  analysis.py  bindAction.cpp  bindConfiguration.cpp  bindDevice.cpp  bindIO.cpp  bindIntegrator.cpp  bindLattice.cpp  bindMCMC.cpp  bindParameter.cpp  bindTensor.cpp  example_MCMC.py  fitter.py  helloworld.cpp  offset.py  testingPythonFunctionality.py  trainTransformer.py
Tests/: CMakeLists.txt  test.hpp  test_main.cpp
Tests/Action/: test_force.cpp
Tests/Configuration/: CMakeLists.txt  test_configuration.cpp  test_fermionMatrixHubbardExp.cpp
Tests/FermionMatrix/: CMakeLists.txt  test_FermionMatrix_hermitian.cpp  test_fermionMatrixHubbardDiag.cpp  test_fermionMatrixHubbardExp.cpp  test_fermionMatrix_U1Wilson.cpp  test_logDetM.cpp
Tests/Helpers/: CMakeLists.txt  test_typePromotion.cpp
Tests/IO/: CMakeLists.txt  test_IO_h5io.cpp
Tests/Integrator/: CMakeLists.txt  test_leapfrog.cpp  test_leapfrog_convergence.cpp  test_leapfrog_convergence_Wilson.cpp
Tests/Lattice/: CMakeLists.txt  test_bipartite.cpp  test_complete.cpp  test_honeycomb.cpp  test_ring.cpp  test_square.cpp
Tests/LinAlg/: CMakeLists.txt  test_LinAlg_conj.cpp  test_LinAlg_det.cpp  test_LinAlg_inner_product.cpp  test_LinAlg_mat_exp.cpp  test_LinAlg_mat_mul.cpp  test_LinAlg_matvec.cpp  test_LinAlg_shift.cpp  test_adjoint.cpp  test_conj.cpp  test_logdet.cpp  test_mat_exp.cpp  test_mat_mul.cpp  test_shift.cpp  test_transpose.cpp
Tests/LinAlg/Solver/: CMakeLists.txt  test_BiCGStab.cpp  test_CG.cpp
Tests/Matrix/: CMakeLists.txt  test_identity.cpp
Tests/Parameter/: test_parameter.cpp
Tests/Tensor/: CMakeLists.txt  test_Tensor_adjointH.cpp  test_Tensor_conj.cpp  test_Tensor_constructor.cpp  test_Tensor_expand.cpp  test_Tensor_mat_exp.cpp  test_Tensor_operatorAddition.cpp  test_Tensor_operatorCompare.cpp  test_Tensor_operatorMultiplication.cpp  test_Tensor_randomAccess.cpp  test_Tensor_rnd.cpp  test_Tensor_shift.cpp  test_Tensor_slice.cpp  test_Tensor_stats.cpp  test_Tensor_transpose.cpp  test_Tensor_trig.cpp  test_compilation.cpp  test_constructor.cpp  test_operatorAssignment.cpp  test_operatorMultiplication.cpp  test_randomAccess.cpp  test_tensor.cpp  test_timetensor.cpp  test_torchConversion.cpp
src/NSL/: Action.hpp  CMakeLists.txt  Configuration.hpp  FermionMatrix.hpp  IO.hpp  Integrator.hpp  Lattice.hpp  LinAlg.hpp  MCMC.hpp  Matrix.hpp  Measurements.hpp  NSL.hpp  NSL_config.in.hpp  RNG.hpp  RNG.tpp  Tensor.hpp  U1.hpp  assert.hpp  commandLineInterface.hpp  commandLineInterface.tpp  complex.hpp  concepts.hpp  device.tpp  gpu.cpp  gpu.hpp  logger.hpp  map.hpp  none.tpp  paramPack.hpp  parameter.tpp  precisionMatching.hpp  profiling.hpp  realImag.tpp  slice.hpp  sliceObj.tpp  transformer.hpp  typePromotion.hpp  types.hpp
src/NSL/Action/: action.tpp  actionParams.tpp
src/NSL/Configuration/: Configuration.tpp  configuration.tpp
src/NSL/Dirac/: gamma.tpp
src/NSL/FermionMatrix/: CMakeLists.txt  fermionMatrix.hpp  fermionMatrixBase.cpp  fermionMatrixBase.hpp  fermionMatrixHubbardExp.cpp  fermionMatrixHubbardExp.hpp
src/NSL/IO/: h5_io.tpp  to_string.tpp
src/NSL/Integrator/: integrator.tpp
src/NSL/Lattice/: CMakeLists.txt  lattice.cpp  lattice.hpp  lattice.tpp
src/NSL/LinAlg/: CMakeLists.txt  abs.hpp  abs.tpp  adjoint.hpp  adjoint.tpp  complex.tpp  conj.hpp  conj.tpp  conjugate_by.hpp  det.hpp  det.tpp  diag.tpp  eigh.tpp  exp.hpp  exp.tpp  flip.tpp  inner_product.tpp  inv.tpp  log.tpp  mat_conj.hpp  mat_exp.hpp  mat_exp.tpp  mat_inv.hpp  mat_inv.tpp  mat_mul.hpp  (+11 more)
(+150 files in other folders)
