FUNCTION(add_NSL_test TARGET SRC_FILE)
    get_filename_component(OUT_DIR ${SRC_FILE} DIRECTORY)
    add_executable(${TARGET} ${SRC_FILE} test_main.cpp)
    set_target_properties(${TARGET} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUT_DIR})
    target_link_libraries(${TARGET} NSL Catch2::Catch2)
    add_test(NAME ${TARGET} COMMAND ${OUT_DIR}/${TARGET})
ENDFUNCTION()

add_NSL_test(test_Tensor_adjointH Tensor/test_Tensor_adjointH.cpp)
add_NSL_test(test_Tensor_conj Tensor/test_Tensor_conj.cpp)
add_NSL_test(test_Tensor_constructor Tensor/test_Tensor_constructor.cpp)
add_NSL_test(test_Tensor_operatorAddition Tensor/test_Tensor_operatorAddition.cpp)
add_NSL_test(test_Tensor_operatorAssignment Tensor/test_Tensor_operatorAssignment.cpp)
add_NSL_test(test_Tensor_operatorCompare Tensor/test_Tensor_operatorCompare.cpp)
add_NSL_test(test_Tensor_operatorMultiplication Tensor/test_Tensor_operatorMultiplication.cpp)
add_NSL_test(test_Tensor_randomAccess Tensor/test_Tensor_randomAccess.cpp)
add_NSL_test(test_Tensor_slice Tensor/test_Tensor_slice.cpp)
add_NSL_test(test_Tensor_stats Tensor/test_Tensor_stats.cpp)
add_NSL_test(test_Tensor_torchConversion Tensor/test_Tensor_torchConversion.cpp)
add_NSL_test(test_Tensor_trig Tensor/test_Tensor_trig.cpp)

add_NSL_test(test_LinAlg_adjoint LinAlg/test_LinAlg_adjoint.cpp)
add_NSL_test(test_LinAlg_conj LinAlg/test_LinAlg_conj.cpp)
add_NSL_test(test_LinAlg_det LinAlg/test_LinAlg_det.cpp)
add_NSL_test(test_LinAlg_mat_exp LinAlg/test_LinAlg_mat_exp.cpp)
add_NSL_test(test_LinAlg_mat_mul LinAlg/test_LinAlg_mat_mul.cpp)
add_NSL_test(test_LinAlg_matvec LinAlg/test_LinAlg_matvec.cpp)
add_NSL_test(test_LinAlg_shift LinAlg/test_LinAlg_shift.cpp)
add_NSL_test(test_LinAlg_transpose LinAlg/test_LinAlg_transpose.cpp)
add_NSL_test(test_LinAlg_inner_product LinAlg/test_LinAlg_inner_product.cpp)
add_NSL_test(test_CG LinAlg/Solver/test_CG.cpp)

add_NSL_test(test_bipartite Lattice/test_bipartite.cpp)
add_NSL_test(test_complete Lattice/test_complete.cpp)
add_NSL_test(test_ring Lattice/test_ring.cpp)
add_NSL_test(test_square Lattice/test_square.cpp)
add_NSL_test(test_honeycomb Lattice/test_honeycomb.cpp)

add_NSL_test(test_FermionMatrix_hermitian FermionMatrix/test_FermionMatrix_hermitian.cpp)
add_NSL_test(test_fermionMatrixHubbardExp FermionMatrix/test_fermionMatrixHubbardExp.cpp)
add_NSL_test(test_fermionMatrixHubbardDiag FermionMatrix/test_fermionMatrixHubbardDiag.cpp)
add_NSL_test(test_FermionMatrix_U1Wilson FermionMatrix/test_fermionMatrix_U1Wilson.cpp)

add_NSL_test(test_identity Matrix/test_identity.cpp)
add_NSL_test(test_configuration Configuration/test_configuration.cpp)
add_NSL_test(test_typePromotion Helpers/test_typePromotion.cpp)
add_NSL_test(test_leapfrog Integrator/test_leapfrog.cpp)

add_NSL_test(test_IO_H5 IO/test_IO_h5io.cpp)

add_NSL_test(test_force Action/test_force.cpp)

add_NSL_test(test_parameter Parameter/test_parameter.cpp)

# Stand alone Executalbes to test stuff
add_executable(test_leapfrog_convergence Integrator/test_leapfrog_convergence.cpp)
target_link_libraries(test_leapfrog_convergence NSL)
