
add_executable(example_TensorBasics example_tensor_basics.cpp)
target_link_libraries(example_TensorBasics NSL)

add_executable(example_GPU_Tensor example_GPU_Tensor.cpp)
target_link_libraries(example_GPU_Tensor NSL)

add_executable(example_Tensor_datalocality example_Tensor_datalocality.cpp)
target_link_libraries(example_Tensor_datalocality NSL)

add_executable(example_action example_action.cpp)
target_link_libraries(example_action NSL)

add_executable(example_MCMC example_MCMC.cpp)
target_link_libraries(example_MCMC NSL)

add_executable(example_MCMC_L6_MD22 example_MCMC_L6_MD22.cpp)
target_link_libraries(example_MCMC_L6_MD22 NSL)

add_executable(example_MCMC_L6_MD30 example_MCMC_L6_MD30.cpp)
target_link_libraries(example_MCMC_L6_MD30 NSL)

add_executable(example_MCMC_L9_MD22 example_MCMC_L9_MD22.cpp)
target_link_libraries(example_MCMC_L9_MD22 NSL)

add_executable(example_MCMC_L9_MD30 example_MCMC_L9_MD30.cpp)
target_link_libraries(example_MCMC_L9_MD30 NSL)

#add_executable(example_GPU_Tensor example_GPU_Tensor.cpp)
#target_link_libraries(example_GPU_Tensor NSL)

add_executable(example_leapfrog example_leapfrog.cpp)
target_link_libraries(example_leapfrog NSL)

add_executable(example_honeycomb example_honeycomb.cpp)
target_link_libraries(example_honeycomb NSL)

add_executable(example_CG example_CG.cpp)
target_link_libraries(example_CG NSL)

add_executable(example_IO example_IO.cpp)
target_link_libraries(example_IO NSL)

add_executable(example_lattice example_lattice.cpp)
target_link_libraries(example_lattice NSL)
